--- a/tsa_band_website/styles/stylesheet.css
+++ b/tsa_band_website/styles/stylesheet.css
@@ -52,8 +52,12 @@ body {
 }
 
 .myimage {
-  background-size: cover;
+  /*background-size: cover;*/
   background-image: url("https://www.rover.com/blog/wp-content/uploads/2017/05/pug-tilt-960x540.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .navbar {
